# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import categoriesRouter from "./categories";
+import ordersRouter from "./orders";
+import wishlistRouter from "./wishlist";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/products", productsRouter);
+router.use("/categories", categoriesRouter);
+router.use("/orders", ordersRouter);
+router.use("/wishlist", wishlistRouter);
 
 export default router;
